<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".AddPlayersActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:text="@string/enter_player_names"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:maxLines="1"
        android:id="@+id/editText_playerOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/cross_30x30"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/player_one"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText_playerTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/zero_30x30"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/player_two"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_playerOne" />

    <Button
        android:id="@+id/button_startGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:padding="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#0A93C9"
        android:text="@string/start_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius = "12dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_playerTwo" />



</androidx.constraintlayout.widget.ConstraintLayout>

<!--<ImageView-->
<!--android:id="@+id/imageView2"-->
<!--android:layout_width="40dp"-->
<!--android:layout_height="40dp"-->
<!--android:layout_marginStart="30dp"-->
<!--android:layout_marginTop="30dp"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toTopOf="parent"-->
<!--app:srcCompat="@drawable/settings1" />-->